ajusta configuração de CORS e adiciona busca de mesa por código
